--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <body>
         <main>
             <header class="header">
-                <div class="nav-link logo" id="logo">Vibe</div>
+                <div class="nav-link logo35" id="logo">Vibe</div>
                 <div class="nav-link">Home</div>
-                <div class="nav-link">Explore</div>
+                <div class="nav-test">Explore</div>
                 <div class="nav-link">Playlist</div>
                 <div class="nav-link">Login</div>
             </header>
