updaiting nav type

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="nav-link logo" id="logo">Vibe</div>
                 <div class="nav-link">Home</div>
                 <div class="nav-link">Explore</div>
-                <div class="nav-link">Playlist</div>
+                <div class="nav-seven">Playlist</div>
                 <div class="nav-link">Login</div>
             </header>
             <section class="container">
