--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <main>
             <header class="header">
-                <div class="nav-link logo35" id="logo">Vibe</div>
+                <div class="nav-eleven logo35" id="logo">Vibe</div>
                 <div class="nav-link">Home</div>
                 <div class="nav-test">Explore</div>
                 <div class="nav-link">Playlist</div>
