--- a/index.html
+++ b/index.html
@@ -18,36 +18,28 @@
             </header>
             <section class="container">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
                 </p>
             </section>            
         </main>
