--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <body>
         <main>
             <header class="header">
-                <div class="nav-eleven logo35" id="logo">Vibe</div>
-                <div class="nav-link">Home</div>
-                <div class="nav-test">Explore</div>
-                <div class="nav-link">Playlist</div>
-                <div class="nav-link">Login</div>
+                <div thisisarealclass="nav-eleven logo35" id="logo">Vibe</div>
+                <div thisisarealclass="nav-link">Home</div>
+                <div thisisarealclass="nav-test">Explore</div>
+                <div thisisarealclass="nav-link">Playlist</div>
+                <div thisisarealclass="nav-link">Login</div>
             </header>
             <section class="container">
                 <p>
