--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <main>
             <header class="header">
                 <div class="nav-eleven logo35" id="logo">Vibe</div>
-                <div class="nav-link">MyHouse</div>
-                <div class="nav-test">FoundIt</div>
-                <div class="nav-link">HatEMusic</div>
-                <div class="nav-link">Logout</div>
+                <div class="notarealclass">MyHouse</div>
+                <div class="notarealclass">FoundIt</div>
+                <div class="notarealclass">HatEMusic</div>
+                <div class="notarealclass">Logout</div>
             </header>
             <section class="container">
                 <p>
