--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
             </header>
             <section class="container">
                 <p>
-                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
+                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
                 </p>
                 <p>
-                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
+                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
                 </p>
                 <p>
-                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
+                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
                 </p>
                 <p>
-                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
+                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
                 </p>
                 <p>
-                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
+                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
                 </p>
                 <p>
-                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
+                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
                 </p>
                 <p>
-                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
+                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
                 </p>
                 <p>
-                    ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST! ERIC IS DA BEST!
+                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
                 </p>
             </section>            
         </main>
