--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             </header>
             <section class="container">
                 <p>
-                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
+                    Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST!
                 </p>
                 <p>
-                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
+                    Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST!
                 </p>
                 <p>
-                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
+                    Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST!
                 </p>
                 <p>
-                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
+                    Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST!
                 </p>
                 <p>
-                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
+                    Mackenzie IS DA BEST! Mackenzie IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
                 </p>
                 <p>
                     Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
