--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </header>
             <section class="container">
                 <p>
-                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
+                    John IS DA BEST! John IS DA BEST! John IS DA BEST! John IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
                 </p>
                 <p>
                     Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
