--- a/index.html
+++ b/index.html
@@ -1,47 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="reset.css">
-        <link href="styles.css" rel="stylesheet">
-    </head>
-    <body>
-        <main>
-            <header class="header">
-                <div thisisarealclass="nav-eleven logo35" id="logo">Vibe</div>
-                <div thisisarealclass="nav-link">Home</div>
-                <div thisisarealclass="nav-test">Explore</div>
-                <div thisisarealclass="nav-link">Playlist</div>
-                <div thisisarealclass="nav-link">Login</div>
-            </header>
-            <section class="container">
-                <p>
-                    John IS DA BEST! John IS DA BEST! John IS DA BEST! John IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
-                </p>
-                <p>
-                    Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST!
-                </p>
-                <p>
-                    Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST!
-                </p>
-                <p>
-                    Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST!
-                </p>
-                <p>
-                    Mackenzie IS DA BEST! Mackenzie IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
-                </p>
-                <p>
-                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
-                </p>
-                <p>
-                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
-                </p>
-                <p>
-                    Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
-                </p>
-            </section>            
-        </main>
-    </body>
+
+<head>
+    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="reset.css">
+    <link href="styles.css" rel="stylesheet">
+</head>
+
+<body>
+    <main>
+        <header class="header">
+            <div thisisarealclass="nav-eleven logo35" id="logo">SomethingCooler</div>
+            <div thisisarealclass="nav-link">NotHome</div>
+            <div thisisarealclass="nav-test">NotExplore</div>
+            <div thisisarealclass="nav-link">NotPlaylist</div>
+            <div thisisarealclass="nav-link">NotLogin</div>
+        </header>
+        <section class="container">
+            <p>
+                John IS DA BEST! John IS DA BEST! John IS DA BEST! John IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
+                Peter IS DA BEST!
+            </p>
+            <p>
+                Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS
+                DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST!
+            </p>
+            <p>
+                Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS
+                DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST!
+            </p>
+            <p>
+                Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS
+                DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST!
+            </p>
+            <p>
+                Mackenzie IS DA BEST! Mackenzie IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter
+                IS DA BEST! Peter IS DA BEST!
+            </p>
+            <p>
+                Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
+                Peter IS DA BEST!
+            </p>
+            <p>
+                Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
+                Peter IS DA BEST!
+            </p>
+            <p>
+                Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
+                Peter IS DA BEST!
+            </p>
+        </section>
+    </main>
+</body>
+
 </html>
