--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
         <section class="container">
             <p>
-                John IS DA BEST! John IS DA BEST! John IS DA BEST! John IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
+                Bruno IS DA BEST! Bruno IS DA BEST! Bruno IS DA BEST! Bruno IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
                 Peter IS DA BEST!
             </p>
             <p>
