--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
                 Peter IS DA BEST!
             </p>
             <p>
-                Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS
-                DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST!
+                Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh
+                IS DA BEST!
             </p>
             <p>
-                Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS
-                DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST!
+                Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh
+                IS DA BEST!
             </p>
             <p>
-                Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST! Mackenzie IS
-                DA BEST! Mackenzie IS DA BEST! Mackenzie IS DA BEST!
+                Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh
+                IS DA BEST!
             </p>
             <p>
-                Mackenzie IS DA BEST! Mackenzie IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter
-                IS DA BEST! Peter IS DA BEST!
+                Josh IS DA BEST! Josh IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
+                Peter IS DA BEST!
             </p>
             <p>
                 Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
