--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </header>
         <section class="container">
             <p>
-                Bruno IS DA BEST! Bruno IS DA BEST! Bruno IS DA BEST! Bruno IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS DA BEST!
-                Peter IS DA BEST!
+                Steven IS DA BEST! Steven IS DA BEST! Steven IS DA BEST! Steven IS DA BEST! Peter IS DA BEST! Peter IS DA BEST! Peter IS
+                DA BEST! Peter IS DA BEST!
             </p>
             <p>
                 Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh IS DA BEST! Josh
